--- a/tp2_restaurant-septime/css/style.css
+++ b/tp2_restaurant-septime/css/style.css
@@ -1,4 +1,59 @@
-@import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,400,400i,500,500i,700");
+ @import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,400,400i,500,500i,700");
+
+.container{
+    margin: auto;
+    width:1024px;
+    font-family: "Cormorant Garamond";
+
+}
+h1,h2,h3{
+    text-transform: uppercase;
+    /* pour mettre en majuscule */
+    letter-spacing: 4px;
+    /* pour espacer entre les lettre */
+    
+}
+h1{
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    padding: 20px 0;
+    
+}
+h2{
+    border-top:1px solid;
+    width:100%
+}
+h3{
+    text-align: center;
+    color: rgb(122, 112, 100);
+   
+}
+header{
+    margin:auto;
+    width:50%;
+    text-align:center;
+}
+ul{
+    display: flex;
+    list-style:none;
+    justify-content: space-around;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+section{
+    display: flex;   
+    /* par défauts display flex va à la ligne */
+    align-items: center;
+    justify-content: space-around;
+    text-align: right;
+}
+.plat{
+    width:100%;
+}
+/* @import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,400,400i,500,500i,700");
 body{
    font-family: Cormorant Garamond;
    font-size: larger;
@@ -14,11 +69,14 @@ body{
     display: inline-block;
 }
 ul{
-    display: flex;
+    display: inline;
     text-align: center;
     list-style-type: none;
     font-size: large;
     font-style: italic;
+}
+ul li {
+    display: inline;
 }
 
 img{
@@ -42,9 +100,25 @@ header {
     display: flex;
     justify-content: left;
 }
+div{
+    margin:10px;
 
+}
+h2{
+     font-style: italic;
+}
+H1{
+    border
+} */
 
-
+/* div> h2{
+    margin:10px auto;
+    letter-spacing: 7px;
+    text-transform: uppercase;
+    text-align: right;
+    /* position: absolute;
+    transform: translate(80%,-700%); */
+/* }  */
 
 
 
