--- a/Media_query/css/style.css
+++ b/Media_query/css/style.css
@@ -1,71 +1,106 @@
-.container{
-    width:1800px;
-    margin: auto;
+.container {
+  width: 1800px;
+  margin: auto;
 }
-header{
-    height: 100%;
+header {
+  height: 100%;
 }
-section{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  .img2 {
+    display: none;
+  }
+section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+section figure {
+    margin: 50px 20px; 
+    /* 50px pour le haut et le bas et 20px pour la droite et la gauche */
 }
 figure {
-    width:350px;
-    height:350px;  
-    border: solid 1px black;
+  width: 350px;
+  height: 350px;
+  border: solid 1px black;
 }
-img{
-    width:100%;
-    height:100%;
+img {
+  width: 100%;
+  height: 100%;
+}
+a {
+  color: rgb(61, 193, 61);
+  text-decoration: none;
+}
+figure {
+    position: relative;
  
 }
-a{
-    color: rgb(61, 193, 61);
-    text-decoration: none;
-}
-figure{
-     position: relative;
-}
-.bulle{
-    border-radius: 50px;
-    background-color: rgb(132, 138, 125);
-    height: 70px;
-    width: 70px;
-    position: absolute;
-    top: 15px;
-    right: 40px;
+p{
     text-align: center;
 }
-.icon{
-      position:absolute;
-      top:15px ;
-      font-size: 35px;
+.bulle {
+  border-radius: 50px;
+  background-color: rgb(132, 138, 125);
+  height: 70px;
+  width: 70px;
+  position: absolute;
+  top: 1px;
+  right: 40px;
+  text-align: center;
+  
 }
-
-@media(max-width:1800px){
-    .container{
-        width: 100%;
-    }
-
+.icon {
+  position: absolute;
+  top: 5px;
+  font-size: 45px;
 }
-@media(max-width:960px){
-    .container{
-        width: 100%;
-    }
-    header{
-        display: none;
-    }
-
-}
-@media(max-width:760px){
-    .container{
-        width: 100%;
-    
-    }
-    header{
-        display: none;
-    }
+.icon_2{
+position: absolute;
+top:5px ;
+font-size: 40px;
+left:50px;
 
 }
-
+.rectangle{
+    background-color: rgb(9, 9, 9);
+    height: 40px;
+    width: 120px;
+    position: absolute;
+}
+ 
+.sponso{
+    position: absolute;
+    top: 3px;
+    left: 55px;
+}
+.bb{
+    position: relative;
+}
+@media (max-width: 1800px) {
+  .container {
+    width: 100%;
+  }
+  .img1 {
+    display: none;
+  }
+  .img2 {
+    display: block;
+  }
+}
+@media (max-width: 960px) {
+  .container {
+    width: 100%;
+  }
+  header {
+    display: none;
+  }
+}
+@media (max-width: 760px) {
+  .container {
+    width: 100%;
+  }
+  header {
+    display: none;
+  }
+  
+}
